samples/_failures_safe/1761094911_cf8c8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_969d8e6c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_969d8e6c.c:158:16: error: expected ‘;’ at end of input
  158 |             pos
      |                ^
      |                ;
./samples/SAFE/__tmp_969d8e6c.c:158:13: error: expected declaration or statement at end of input
  158 |             pos
      |             ^~~
./samples/SAFE/__tmp_969d8e6c.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_969d8e6c.c:158:13: error: expected declaration or statement at end of input
